# pyfresco

./: .gitignore  License.txt  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
docs/: conf.py  index.rst  installation.rst  modules.rst  notebooks.rst  requirements.txt  requires.txt
docs/notebooks/: notebook1.ipynb  notebook2_extraction_methods.ipynb  notebook3_normalization_methods.ipynb  notebook4_mafic_analysis.ipynb  notebook5_ml_mgm.ipynb  notebook6_maps.ipynb  pyfresco_new_rgb_maps_tutorial_with_figures.ipynb
docs/source/: conf.py  index.rst  installation.rst  modules.rst
pyfresco/: RGBmap.py  SpectraAnalysis.py  SpectraExtract.py  SpectraNorm.py  __init__.py
pyfresco/data/: al_smectite_LAB.txt  alunite_LAB.txt  analcime_LAB.txt  bassanite_LAB.txt  chloride_LAB.txt  chlorite_LAB.txt  crism_spec_al_smectite.txt  crism_spec_alunite.txt  crism_spec_analcime.txt  crism_spec_bassanite.txt  crism_spec_ca_fe_carbonate.txt  crism_spec_chloride.txt  crism_spec_chlorite.txt  crism_spec_co2_ice.txt  crism_spec_epidote.txt  crism_spec_fe_olivine.txt  crism_spec_fe_smectite.txt  crism_spec_gypsum.txt  crism_spec_h2o_ice.txt  crism_spec_hematite.txt  crism_spec_high_ca_pyroxene.txt  crism_spec_hydrated_silica.txt  crism_spec_hydroxylated_fe_sulfate.txt  crism_spec_illite_muscovite.txt  crism_spec_jarosite.txt  crism_spec_kaolinite.txt  crism_spec_low_ca_pyroxene.txt  crism_spec_margarite.txt  crism_spec_mg_carbonate.txt  crism_spec_mg_olivine.txt  crism_spec_mg_smectite.txt  crism_spec_mono_hyd_sulf.txt  crism_spec_plagioclase.txt  epidote_LAB.txt  (+26 more)
