[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFRESCO"
version = "0.1.0"
requires_python = ">=3.7"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Marco Baroni", email = "mbaroni96@gmail.com"}, {name = "Beatrice Baschetti", email = "beatrice.baschetti@inaf.it"}]

[project.urls]
"Source" = "https://github.com/MarcoBaroni/pyfresco"
