[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyFRESCO"
version = "0.1.9"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.12"
authors = [{ name = "Marco Baroni", email = "mbaroni96@gmail.com"}, {name = "Beatrice Baschetti", email = "beatrice.baschetti@inaf.it"},
           { name = "Alessandro Pisello", email = "alessandropisello@gmail.com" }]

dependencies = [
  "kneed>=0.8.5,<1",
  "matplotlib>=3.7.5,<4",
  "numpy>=1.24.4,<3",
  "pandas>=2.0.3,<3",
  "rasterio>=1.3.10,<2",
  "scipy>=1.10.1,<2",
  "spectral>=0.23.1,<1",
  "torch>=2.4.0,<3"
]

[project.urls]
"Source" = "https://github.com/MarcoBaroni/pyfresco"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyfresco*"]

[tool.setuptools.package-data]
"pyfresco" = [
  "data/*.txt",
  "data/*.csv",
  "data/*.xlsx"
]
